src/core/ui/button/tooltip/tooltip.less
/*!
 * Jodit Editor (https://xdsoft.net/jodit/)
 * Released under MIT see LICENSE.txt in the project root for license information.
 * Copyright (c) 2013-2026 Valerii Chupurnov. All rights reserved. https://xdsoft.net
 */

@import (reference) '../../../../styles/variables';
@import (reference) '../../../../styles/mixins';

:root {
	--tooltip-color: #fff;
	--tooltip-background-color: rgb(0 0 0 / 70%);
	--tooltip-sfx-shadow: rgb(0 0 0 / 15%);
	--tooltip-border-width: 0;
	--tooltip-border-color: #e5e5e5;
}

.jodit-ui-tooltip {
	position: fixed;
	z-index: var(--z-index-tooltip);
	width: auto;
	max-width: 120px;
	border-radius: 4px;
	animation-fill-mode: forwards;
	animation-timing-function: ease-out;
	background-clip: padding-box;
	background-color: var(--tooltip-background-color);
	box-shadow:
		0 0 0 var(--tooltip-border-width) var(--tooltip-border-color),
		0 8px 20px var(--tooltip-border-width) var(--tooltip-sfx-shadow);
	color: var(--tooltip-color);
	font-family: var(--font-default);
	font-size: var(--font-size-small);
	line-height: 1.4;
	opacity: 0;
	outline: none;
	text-rendering: optimizelegibility;
	transform: translate(-50%, calc(var(--padding-default) / 2));
	transition: opacity 0.2s ease 0s;
	user-select: none;
	white-space: normal;
	pointer-events: none;

	@media (max-width: @screen-sm) {
		display: none;
	}
}

.jodit-ui-tooltip__content {
	padding: calc(var(--padding-default) / 2) calc(var(--padding-default) * 1.5);
}

.jodit-ui-tooltip.jodit-ui-tooltip_visible_true {
	opacity: 1;
}

